# PythonScript_pdf2ocr2md

./: .gitignore  CLAUDE.md  README.md  config.py  convert.py  gemini_prompt.md  manual_Tom用.md  pyproject.toml
app/: main.py
templates/: index.html  result.html
