[project]
name = "pdf-converter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "jinja2>=3.1.0",
    "PyMuPDF>=1.24.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "uvicorn>=0.30.0",
    "yossy-portal-lib",
]

[tool.uv.sources]
yossy-portal-lib = { path = "../yossy-portal/lib" }
